--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://localhost:4000",
   "main": "server/index.js",
   "dependencies": {
+    "acorn": "^8.4.1",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
